@@ -1,6 +1,6 @@
 package agente.Simulated_Annealing;
 
-
+import agente.Genetic_Algoritm.individuals.Deck; // per cardUsageCV()
 import agente.Simulated_Annealing.Modello_di_transizione.Azione;
 import agente.Simulated_Annealing.Stato_corrente.Stato;
 import agente.Simulated_Annealing.Stato_corrente.Vincoli;
@@ -11,101 +11,143 @@ import model.Troop;
 import java.util.*;
 
 public class SA_core {
+
     public record Params(
-            int numeroTry,  //n. di tentativi in cui si ripete la generazione dello stato per oviare il fallimento
-            int numCarte,    //definisce il numero di carte che provo a sostituire al più per cella dello stato
-            double tempIniziale, // definisce la temperatura iniziale
-            double tempFin, // definisce la temperatura finale
-            double raff //definisce il tasso di raffreddamento
+            int numeroTry,
+            int numCarte,
+            double tempIniziale,
+            double tempFin,
+            double raff
     ) {
-        public static Params defaults(){
+        public static Params defaults() {
             return new Params(
                     500,
                     101,
                     10000,
                     1,
-                    0.95
+                    0.25
             );
         }
     }
-    public record Output(Stato bestStato, String details, String log) {
+
+    /** Output originale */
+    public record Output(Stato bestStato, String details, String log) {}
+
+    /** Output esteso per metriche */
+    public record OutputTrace(
+            Stato bestStato,
+            Deck bestDeck,                    // comodo per metriche
+            String details,
+            String log,
+            List<Double> bestUtilityPerStep,  // per convergenceGeneration()
+            List<Deck> bestDeckPerStep        // per cardUsageCV()
+    ) {}
+
+    /** Run originale: compatibile */
+    public static Output run(List<Card> pool,
+                             Vincoli vincoli,
+                             double delta,
+                             double desiredAvgElixir) {
+        OutputTrace tr = runWithTrace(pool, vincoli, delta, desiredAvgElixir);
+        return new Output(tr.bestStato(), tr.details(), tr.log());
     }
 
-    public static Output run(List<Card> pool,
-                                     Vincoli vincoli,
-                                     double delta,
-                                     double desiredAvgElixir
-    ) {
+    /** Run con trace per metriche */
+    public static OutputTrace runWithTrace(List<Card> pool,
+                                           Vincoli vincoli,
+                                           double delta,
+                                           double desiredAvgElixir) {
+
         Objects.requireNonNull(pool, "pool");
-        Objects.requireNonNull(vincoli, "constraints");
+        Objects.requireNonNull(vincoli, "vincoli");
 
         StringBuilder log = new StringBuilder();
+        List<Double> bestUtilityPerStep = new ArrayList<>();
+        List<Deck> bestDeckPerStep = new ArrayList<>();
 
         if (pool.size() < Stato.SIZE_STATO) {
             String msg = "Pool carte troppo piccolo: servono almeno 8 carte, ne hai " + pool.size();
-            return new Output(null, msg, msg);
+            return new OutputTrace(null, null, msg, msg, List.of(), List.of());
         }
 
-        //inizializzo le risorse necessarie a runnare l'algoritmo
-        stato_iniziale starter=new stato_iniziale();
-        Azione movment =new Azione();
+        stato_iniziale starter = new stato_iniziale();
+        Azione movement = new Azione();
 
-        //istanzio la prima soluzione
-        Stato start=starter.createStato(pool,vincoli,Params.defaults().numeroTry(),delta,desiredAvgElixir);
+        Stato start = starter.createStato(pool, vincoli, Params.defaults().numeroTry(), delta, desiredAvgElixir);
 
+        // primo intorno
+        List<Stato> neighborhood = movement.findNeighborhood(
+                pool, start, vincoli,
+                Params.defaults().numCarte(),
+                Params.defaults().numeroTry(),
+                delta, desiredAvgElixir
+        );
 
-        List<Stato> cards=movment.findNeighborhood(pool,start,vincoli,Params.defaults().numCarte,Params.defaults().numeroTry,delta,desiredAvgElixir);
-        Collections.sort(cards);
-        cards =cards.reversed();
-        Stato best=cards.get(0);
+        Collections.sort(neighborhood);
+        neighborhood = neighborhood.reversed();
+        Stato best = neighborhood.getFirst();
 
+        // step 0
+        bestUtilityPerStep.add(best.getUtility());
+        bestDeckPerStep.add(toDeck(best));
 
-        //setto il tempo dell'algoritmo
-        double time = Params.defaults().tempIniziale;
+        double time = Params.defaults().tempIniziale();
 
-        time*=(1- Params.defaults().raff);
+        // ciclo di raffreddamento
+        while (time > Params.defaults().tempFin()) {
 
-        //ciclo di raffreddamento
-        while (time>Params.defaults().tempFin) {
-            //genero l'insieme delle soluzioni vicine
-            cards=movment.findNeighborhood(pool,best,vincoli,Params.defaults().numCarte,Params.defaults().numeroTry,delta,desiredAvgElixir);
-            Collections.sort(cards);
+            neighborhood = movement.findNeighborhood(
+                    pool, best, vincoli,
+                    Params.defaults().numCarte(),
+                    Params.defaults().numeroTry(),
+                    delta, desiredAvgElixir
+            );
 
-            //scelgo la soluzione più conveniente
-            cards =cards.reversed();
-            Stato newbest=cards.get(0);
+            Collections.sort(neighborhood);
+            neighborhood = neighborhood.reversed();
+            Stato candidate = neighborhood.getFirst();
 
-            //scalgo se accettare la soluzione
-            if(acceptanceProbability(newbest.getUtility(),best.getUtility(),time)>Math.random())
-                best=newbest;
+            // accetta se migliore o con probabilità
+            if (acceptanceProbability(best.getUtility(), candidate.getUtility(), time) > Math.random()) {
+                best = candidate;
+            }
 
-            //raffreddamento
-            time*=(1- Params.defaults().raff);
+            // tracce per metriche
+            bestUtilityPerStep.add(best.getUtility());
+            bestDeckPerStep.add(toDeck(best));
+
+            // raffreddamento (standard)
+            time *= Params.defaults().raff();
         }
 
-        return new Output(best,formatDetails(best,vincoli,delta),"");
+        String details = formatDetails(best, vincoli, delta);
+
+        return new OutputTrace(
+                best,
+                toDeck(best),
+                details,
+                log.toString(),
+                List.copyOf(bestUtilityPerStep),
+                List.copyOf(bestDeckPerStep)
+        );
     }
 
     /**
-     * Metodo che calcola la probabilità di accettazione
-     * */
-    private static double acceptanceProbability(double currentEnergy, double neighborEnergy, double temp) {
-        if (neighborEnergy < currentEnergy) {
-            return 1.0; // Accetta sempre se migliore
+     * Acceptance prob coerente con MASSIMIZZAZIONE (utility più alta = migliore).
+     */
+    private static double acceptanceProbability(double currentScore, double neighborScore, double temp) {
+        if (neighborScore > currentScore) {
+            return 1.0;
         }
-        // Accetta se peggiore con probabilità basata sulla temperatura
-        return Math.exp((currentEnergy - neighborEnergy) / temp);
+        return Math.exp((neighborScore - currentScore) / temp);
     }
 
+    private static Deck toDeck(Stato s) {
+        // snapshot minimo: copia lista carte
+        return new Deck(new ArrayList<>(s.getCards()));
+    }
 
-
-    /**
-     * Metodo per formattare i dati del deck vincente
-     * */
-    private static String formatDetails(Stato best,
-                                        Vincoli c,
-                                        double delta
-    ) {
+    private static String formatDetails(Stato best, Vincoli c, double delta) {
         if (best == null) return "Nessun deck generato.";
 
         List<Card> cards = best.getCards();
@@ -123,9 +165,6 @@ public class SA_core {
         StringBuilder sb = new StringBuilder();
         sb.append("Funzione di Utilità: ").append(fmt(best.getUtility())).append("\n");
         sb.append("Delta: ").append(fmt(delta)).append("\n");
-        /**
-         * si può aggiungere il valore dell'euristica
-         * */
 
         sb.append("Vincoli (minimi):\n");
         sb.append("- Air >= ").append(c.nFlyingTroop).append("\n");
